Add loading of background messages in sync

--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -17,17 +17,17 @@
   <ion-grid>
     <ion-row>
       <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
-        <!--<img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;-->
+        <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
         {{ organisationUnitLabel }}
       </div>
 
       <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
-        <!--<img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;-->
+        <img  class="side-menu-icon" [src]="icons.program"/>&nbsp;&nbsp;
         {{ programLabel }}
       </div>
 
       <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openPeriodList()" >
-        <!--<img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;-->
+        <img  class="side-menu-icon" [src]="icons.period"/>&nbsp;&nbsp;
         {{ periodLabel }}
       </div>
 
