Update progress messages on clear and download metadata as well as if no assigned orgunit found

--- a/src/pages/organisation-unit-selection/organisation-unit-selection.html
+++ b/src/pages/organisation-unit-selection/organisation-unit-selection.html
@@ -33,7 +33,7 @@
                                     (selectedOrganisationUnit)="setSelectedOrganisationUnit($event)"
                                     [currentUser]="currentUser"></organisation-unit-tree>
     </div>
-    <div *ngIf="organisationUnits.length > 0 && emptyMessage !=''">
+    <div *ngIf="organisationUnits.length == 0 && emptyMessage !=''">
       <empty-list-notification [emptyListMessage]="emptyMessage" ></empty-list-notification>
     </div>
   </div>
