update upload-data-via-internet component

--- a/src/pages/report-view/report-view.html
+++ b/src/pages/report-view/report-view.html
@@ -6,14 +6,14 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>ReportView</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
 
   <ion-grid>
 
