--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -38,7 +38,8 @@
         </div>
 
         <div *ngIf="syncContent.id == 'dataViaInternet'" >
-          <empty-list-notification [emptyListMessage]="'Coming soon'"></empty-list-notification>
+          <upload-data-via-internet></upload-data-via-internet>
+          <!--<empty-list-notification [emptyListMessage]="'Coming soon'"></empty-list-notification>-->
         </div>
 
         <div *ngIf="syncContent.id == 'downloadMetadata'" >
