Picking entry form layout form setting

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -95,8 +95,8 @@
                     <ion-item>
                       <ion-label>Form Layout</ion-label>
                       <ion-select [(ngModel)]="settingObject.entryForm.formLayout" interface="action-sheet">
-                        <ion-option value="listLayout">List</ion-option>
-                        <ion-option value="tableLayout">Table</ion-option>
+                        <ion-option value="listLayout">List layout</ion-option>
+                        <ion-option value="tableLayout">Table layout</ion-option>
                       </ion-select>
                     </ion-item>
                     <ion-item>
