add warning component as well as add note if options for one of category is not applicable on selected OU

--- a/src/pages/data-entry/data-entry.html
+++ b/src/pages/data-entry/data-entry.html
@@ -42,6 +42,9 @@
               </div>
             </div>
           </div>
+          <div class="item-card" padding-top padding-bottom *ngIf="!isDataSetDimensionApplicable">
+            <warning [warningMessage]="isDataSetDimensionApplicableCategories" ></warning>
+          </div>
         </div>
         <div *ngIf="isFormReady" class="item-card" padding-top padding-bottom full (tap)="openDataEntryForm()">
           <div><b>Organisation Unit</b> : {{ organisationUnitLabel }}<br>
