add pull to refresh report updates feature

--- a/src/pages/report-parameter-selection/report-parameter-selection.html
+++ b/src/pages/report-parameter-selection/report-parameter-selection.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>ReportParameterSelection</ion-title>
+    <ion-title>{{reportName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
