Intiate option selection modal

--- a/src/pages/option-selection-modal/option-selection-modal.html
+++ b/src/pages/option-selection-modal/option-selection-modal.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the ImportSummariesPage page.
+  Generated template for the OptionSelectionModalPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -8,7 +8,7 @@
 
   <ion-toolbar color="primary">
     <ion-title>
-      Import summaries
+      Option selection
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -18,8 +18,7 @@
   </ion-toolbar>
 
 </ion-header>
-
-
 <ion-content padding>
-  {{ importSummaries |json }}
+
+
 </ion-content>
