--- a/src/pages/option-selection-modal/option-selection-modal.html
+++ b/src/pages/option-selection-modal/option-selection-modal.html
@@ -12,13 +12,13 @@
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
-        close
+        <ion-icon name="close"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
 
 </ion-header>
-<ion-content padding>
+<ion-content >
 
 
 </ion-content>
