--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -41,6 +41,9 @@
               <!--<ion-icon name="ios-folder-outline" item-left></ion-icon>-->
               <img  class="side-menu-icon" [src]="icons.reports"/>&nbsp;&nbsp;
               <span >{{ report.name }}</span>
+
+              <ion-icon name="ios-arrow-forward"  item-right ></ion-icon>
+
             </ion-item>
             <ion-item *ngIf = "reportList.length == 0">
               <empty-list-notification [emptyListMessage]="'There is no report to select'"></empty-list-notification>
