remove redundant codes on report period selection

--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -87,13 +87,16 @@
               </ion-col>
             </ion-row>
 
-
             <ion-row *ngIf="entryFormSections.length == 1">
               <ion-col  col-6 col-sm-6>
-
+                <button color="favorite" round ion-button full [disabled] ="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+                  Complete
+                </button>
               </ion-col>
               <ion-col  col-6 col-sm-6>
-
+                <button  color="danger" round ion-button full [disabled] = "isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+                  Undo Complete
+                </button>
               </ion-col>
             </ion-row>
           </div>
