--- a/src/pages/report-parameter-selection/report-parameter-selection.html
+++ b/src/pages/report-parameter-selection/report-parameter-selection.html
@@ -5,31 +5,25 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar color="primary">
     <ion-title>{{reportName}}</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content>
-
   <ion-grid>
-    <ion-row >
+    <ion-row>
       <ion-col>
-
-        <div *ngIf="requireReportParameterorgUnit"  class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
-          <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
-            {{ selectedOrganisationUnitLabel }}
+        <div *ngIf="reportParams.paramOrganisationUnit" class="item-card" color="font-color" padding-top padding-bottom
+             ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()">
+          <img class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
+          {{ selectedOrganisationUnitLabel }}
         </div>
-
-        <div  *ngIf="requireReportParameterperiod" class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openReportPeriodSelection()" >
-          <img  class="side-menu-icon" [src]="icons.period"/>&nbsp;&nbsp;
-            {{ selectedPeriodLabel }}
-          </div>
-
-
+        <div *ngIf="reportParams.paramReportingPeriod" class="item-card" color="font-color" padding-top padding-bottom
+             ion-button clear full text-center text-capitalize (tap)="openReportPeriodSelection()">
+          <img class="side-menu-icon" [src]="icons.period"/>&nbsp;&nbsp;
+          {{ selectedPeriodLabel }}
+        </div>
       </ion-col>
     </ion-row>
 
@@ -37,8 +31,8 @@
 
     <div *ngIf="(orgUnitReady || periodReady )" class="item-card" padding-top padding-bottom full (tap)="goToView()">
       <div><b>Report name</b> : {{ reportName }}<br>
-        <span *ngIf="requireReportParameterorgUnit" ><b>Organisation unit</b> : {{ selectedOrganisationUnitLabel }}</span><br>
-        <span *ngIf="requireReportParameterperiod" ><b>Period</b> : {{ selectedPeriodLabel }}</span>
+        <span *ngIf="reportParams.paramOrganisationUnit" ><b>Organisation unit</b> : {{ selectedOrganisationUnitLabel }}</span><br>
+        <span *ngIf="reportParams.paramReportingPeriod" ><b>Period</b> : {{ selectedPeriodLabel }}</span>
       </div>
       <div class="item-card" color="font-color"  ion-button clear full text-center text-capitalize >
         <img  class="side-menu-icon" [src]="icons.report"/>&nbsp;&nbsp;
