--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -67,8 +67,8 @@
             </div>
           </div>
 
-          <div class="item-card" *ngIf="entryFormSections.length > 1" >
-            <ion-row >
+          <div class="item-card" >
+            <ion-row   *ngIf="entryFormSections.length > 1" >
               <ion-col col-2 col-sm-1 (click)="changePagination(pager.page - 1)" padding-left padding-bottom padding-top>
                 <ion-icon name="ios-arrow-back-outline" ></ion-icon>
               </ion-col>
@@ -91,14 +91,15 @@
                 </button>
               </ion-col>
             </ion-row>
+
             <ion-row *ngIf="entryFormSections.length == 1">
               <ion-col  col-6 col-sm-6>
-                <button color="favorite" round ion-button full [disabled] ="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+                <button color="favorite" round ion-button full [disabled] ="isDataSetCompletenessProcessRunning || isDataSetCompleted" (tap)="updateDataSetCompleteness()">
                   Complete
                 </button>
               </ion-col>
               <ion-col  col-6 col-sm-6>
-                <button  color="danger" round ion-button full [disabled] = "isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+                <button  color="danger" round ion-button full [disabled] = "isDataSetCompletenessProcessRunning || !isDataSetCompleted" (tap)="updateDataSetCompleteness()">
                   Undo Complete
                 </button>
               </ion-col>
