Update event capture UI selection

--- a/src/pages/data-values-sync-container/data-values-sync-container.html
+++ b/src/pages/data-values-sync-container/data-values-sync-container.html
@@ -23,7 +23,9 @@
       [syncStatus]="syncStatus"
       [dataSetIds]="dataSetIds"
       [isDataSetDataDeletionOnProgress]="isDataSetDataDeletionOnProgress"
+      [syncProcess]="syncProcess"
       (onDeleteDataSetData)="onDeleteDataSetData($event)"
+      (onSyncDataSetData)="onSyncingDataSetData($event)"
       [hasDataPrepared]="hasDataPrepared"></data-set-sync>
 
 
