--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -21,13 +21,22 @@
         {{ organisationUnitLabel }}
       </div>
 
-      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
+      <div *ngIf="programLoading" class="item-card" color="font-color" ion-button clear full text-center text-capitalize >
+        <page-loading loadingSize="small"></page-loading>
+      </div>
+      <div *ngIf="!programLoading" class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
         <img  class="side-menu-icon" [src]="icons.program"/>&nbsp;&nbsp;
         {{ programLabel }}
       </div>
 
 
+      <div *ngIf="hasOptions" class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramCategoryOptions()" >
+        <img  class="side-menu-icon" [src]="icons.categoryOptions"/>&nbsp;&nbsp;
+        {{CategoryOptionLabel}}
+      </div>
+
     </ion-row>
+
   </ion-grid>
 
 </ion-content>
