scrop to button on complete or un complete entry form

--- a/src/pages/entry-form-completeness/entry-form-completeness.html
+++ b/src/pages/entry-form-completeness/entry-form-completeness.html
@@ -17,7 +17,7 @@
     <div *ngIf="isLoading">
       <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></page-loading>
     </div>
-    <div *ngIf="!isLoading">
+    <div *ngIf="!isLoading" class="item-card">
       <div *ngFor="let info of userInformation">
         <div class="content">
           <ion-row>
