remove programStageDataElement provider

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -92,7 +92,7 @@
               {{ progressTracker.event.message }}
             </span>
             <span *ngIf="progressTracker.event.message == '' ">
-              Aggregate metadata
+              Event & tracker metadata
             </span>
           </span>
           <div style="text-align: center" item-right >
